refactor: :fire: improve students routes api

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -28,7 +28,7 @@
 <body>
     <div class="success-message">
         <h1>Sucesso!</h1>
-        <p>Aluno cadastrado com sucesso!.</p>
+        <p><%= message %></p>
         <a href="/">Voltar para a página inicial</a>
     </div>
 </body>
